--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,7 @@ repos:
       - id: mypy
         additional_dependencies: [numpy>=1.25.0]
         files: ^ydag
+        exclude: "^ydag/deprecated"
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
