--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,3 +40,8 @@ networkx-stubs = "*"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+# For debugging tests
+[tool.pytest.ini_options]
+log_cli = true
+log_cli_level = "DEBUG"
