--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,8 +34,28 @@ commitizen = "^3.29.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = "*"
+pytest-cov = "*"
+pytest-asyncio = "*"
 mypy = "*"
 networkx-stubs = "*"
+
+[tool.pytest.ini_options]
+#log_cli = true
+#log_cli_level = "DEBUG"
+addopts = "-vvv --cov=. --cov-fail-under=80 --cov-report=html"
+
+[tool.coverage.run]
+omit = [
+    "ydag/deprecated/*",
+    "tests/deprecated/*",
+    ]
+
+[tool.coverage.report]
+exclude_lines = [
+    "@abstractmethod",
+    "@abc.abstractmethod",
+    "pragma: no cover",
+    ]
 
 [build-system]
 requires = ["poetry-core"]
