--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           python-version: 3.11
       - name: Install Python Poetry
-        uses: abatilo/actions-poetry@v2.1.0
+        uses: abatilo/actions-poetry@v2
         with:
           poetry-version: 1.8.3
       - name: Configure poetry
@@ -23,6 +23,11 @@ jobs:
         run: poetry config virtualenvs.in-project true
       - name: View poetry version
         run: poetry --version
+      - uses: actions/cache@v4
+        name: Define a cache for the virtual environment based on the dependencies lock file
+        with:
+          path: ./.venv
+          key: venv-${{ hashFiles('poetry.lock') }}
       - name: Install dependencies
         run: |
           poetry install
