--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       - name: View poetry version
         run: poetry --version
       - uses: actions/cache@v4
-        name: Define a cache for the virtual environment based on the dependencies lock file
+        name: Cache poetry env
         with:
           path: ./.venv
           key: venv-${{ hashFiles('poetry.lock') }}
@@ -32,6 +32,7 @@ jobs:
         run: |
           poetry install
       - uses: actions/cache@v4
+        name: Cache pre-commit env
         with:
           path: ~/.cache/pre-commit
           key: >
@@ -43,6 +44,6 @@ jobs:
         run: |
           poetry run pre-commit install
           poetry run pre-commit run --all-files
-      - name: Test with pytest
+      - name: Run pytest
         run: |
-          poetry run pytest -vvv
+          poetry run pytest
